removed annoying x axis overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .app {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
